# Conversational-Finance-Agent

./: .gitignore  LTM_Last_file.ipynb  LTM_basics.ipynb  LTM_implementation.ipynb  LTM_memory_creation.ipynb  LTM_with_postgre.ipynb  STM_Postgres.ipynb  Summarization_in_STM.ipynb  Trimming_in_STM.ipynb  calc_server.py  main.py  mcp_server.py  pyproject.toml  rag_server.py  stocks_mcp_server.py  test_HITL_1.ipynb  test_HITL_2.ipynb  test_HITL_3.py  test_rag_jupyter.ipynb  test_subgraph_part1.ipynb  test_tool.py
