[project]
name = "ai-conversational-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "fastmcp>=2.14.1",
    "hf-xet>=1.2.0",
    "huggingface-hub[hf-xet]>=0.36.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-google-genai>=4.1.2",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-postgres>=3.0.2",
    "psycopg[binary]>=3.3.2",
    "pypdf>=6.5.0",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.0",
]
